<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <me.lake.librestreaming.ws.StreamLiveCameraView
        android:id="@+id/liveCv"
        android:layout_above="@+id/bulletEt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:hint="@string/send_bullet_hint"
        android:id="@+id/bulletEt"
        android:layout_above="@+id/ll_btn"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sendBtn"
            android:text="@string/send_bullet"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/swapBtn"
            android:text="@string/swap_camera"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>